# zurigenAI

./: .gitignore  Bias_Reasoning.md  DEVPOST.md  README.md  agents.py  analyze_results.py  bias_reporter.py  check_sony_updates.py  dashboard.html  fhibe_evaluation_sample.json  generate_prompt_variations.py  generate_radar_chart.py  incremental_results.py  orchestrator.py  pyproject.toml  requirements.txt  run_vlm.py  schemas.py  setup_dataset.sh
.claude/: settings.local.json
.github/workflows/: nightly_eval.yml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  nav-footer.tsx  page.tsx
frontend/src/app/api/ask/: route.ts
frontend/src/app/api/audit/: route.ts
frontend/src/app/audit/: page.tsx
frontend/src/app/evidence/: page.tsx
frontend/src/app/hunt/: page.tsx
frontend/src/app/submit/: page.tsx
frontend/src/app/verdict/: page.tsx
frontend/src/data/: vlm_microsoft_Phi-3.5-vision-instruct_20260317_054419_bias_report.json
json_reports/: vlm_Qwen_Qwen2.5-VL-7B-Instruct_20260317_044951_bias_report.json  vlm_Qwen_Qwen3-VL-30B-A3B-Instruct_20260317_072754_bias_report.json
