[project]
name = "sony-bias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "ollama>=0.4.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "httpx>=0.25.0",
    "plotly>=6.6.0",
]
